spread site to many interestas

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -15,6 +15,15 @@ body {
   color: #2c2c2c;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  opacity: 0.8;
+}
+
 .wrapper {
   min-height: 100%;
   display: flex;
@@ -40,6 +49,8 @@ img {
 
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 
   @media screen and (min-width: 768px) {
     display: flex;
