--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+.current {
+  color: tomato;
+}
+
 *,
 *::before,
 *::before {
@@ -13,6 +17,15 @@ body {
   height: 100%;
   font-size: 24px;
   color: #2c2c2c;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  opacity: 0.8;
 }
 
 .wrapper {
@@ -40,6 +53,8 @@ img {
 
 .list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -82,6 +97,27 @@ img {
 .section {
   padding-top: 40px;
   padding-bottom: 40px;
+}
+
+.logo__first {
+  color: orange;
+}
+
+.logo__second {
+  color: blue;
+}
+
+.nav__list {
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.nav__link {
+  display: block;
+  text-decoration: none;
+  padding: 5px;
 }
 
 header {
